Version Changes for Hypermail
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Peter McCluskey (Dec 19 2001)
   Create version 2.1.4 tarball.

Peter McCluskey (Dec 14 2001)
   Applied patch from William King adding </li>'s.

Peter McCluskey (Dec 10 2001)
   Fix bug in chronological ordering of folders.

Peter McCluskey (Dec 6 2001)
   Applied patch from William King to fix footer links on attachment index.

Peter McCluskey (Dec 4 2001)
   Change to detect start of new message when mime boundary missing,
   treat unbounded text as plain text body.

Peter McCluskey (Dec 2 2001)
   Applied patches from William King:
    -  DTD changed to strict.
    -  </p> now emitted.
    - Some tags were not contained properly. Now wrapped in <p></p>.

Peter McCluskey (Dec 1 2001)
   Applied patches from William King to string function defines and gdbm
   configuration.

Peter McCluskey (Nov 30 2001)
   - Add Polish language support from Piotr Waskiewicz. Change some hardcoded
   From's to new macro MSG_FROM, change a Date to MSG_CDATE.
   - update config.sub, config.guess from ftp.gnu.org/gnu/config/.

Peter McCluskey (Nov 26 2001)
   Applied patches from William King to update man pages for body, lang
   options changes, and add new domain codes.

Peter McCluskey (Nov 24 2001)
   Applied patch from William King to add lang= to <html> tag, get rid of
   duplicate <em>.

Peter McCluskey (Nov 23 2001)
   Added support for locales of form en_US. Changed language code "se" to
   "sv", provide warning for old code.

Peter McCluskey (Nov 22 2001)
  - Applied patch from William King to create meta tag with hypermail version
    number.
  - better French support from Emmanuel Blot.

Daniel Stenberg (Nov 21 2001)
   Updates to congfiure and trio.

Peter McCluskey (Nov 21 2001)
  - Applied patches from William King to conform better to HTML 4.01:
    * remove body option, replace default <body> bgcolor=, text= with inline
     style sheet (unless user-defined style sheet present).